# pipelex-lesson-forge

./: AGENTS.md  README.md
.github/workflows/: frontend-version-check.yml
api/: Makefile  pyproject.toml
api/api/: main.py  security.py
api/api/routes/: __init__.py  helpers.py  main.py  uploader.py
api/api/routes/pipelex/: __init__.py  health.py  pipe_builder.py  pipeline.py  plx_validator.py  utils.py
api/api/schemas/: models.py
backend/: .gitignore  pyproject.toml
backend/.cursor/rules/: run_pipelex.mdc  write_pipelex.mdc
backend/.pipelex/: pipelex.toml  telemetry.toml
backend/.pipelex/inference/deck/: lesson_forge_deck.toml
backend/data/: course_1.json  course_2.json  course_3.json
backend/lesson_forge/data_synth/: inputs.json  synth.plx  synth.py  synth_struct.py
backend/lesson_forge/lesson_analysis/: analysis.plx  analysis.py  analysis_inputs.json  analysis_struct.py  extract_course.py
backend/lesson_forge/utils/: results_utils.py
backend/tests/e2e/: test_my_project.py
frontend/: .env.example  .gitignore  AGENTS.md  Makefile  STACK_AUTH_SETUP.md  eslint.config.mjs  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
frontend/.cursor/rules/: rules.mdc
frontend/src/actions/: personalizeLesson.ts  pipeExecute.ts
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/src/app/courses/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/handler/[...stack]/: page.tsx
frontend/src/app/ok/: page.tsx
frontend/src/app/students/: page.tsx  students.json
frontend/src/app/teach/[courseId]/[studentEmail]/: page.tsx
frontend/src/components/: app-sidebar.tsx  course-card.tsx  logout-button.tsx  student-card.tsx  student-selection-modal.tsx
frontend/src/data/: course_analysis_06.json  lesson_adapter.plx
frontend/src/lib/: errors.ts
frontend/src/types/: course.ts  result.ts  student.ts
frontend/src/types/core/: pipelexBundleBlueprint.ts  protocol.ts
frontend/src/types/core/concept/: Concept.ts  conceptBlueprint.ts
frontend/src/types/core/domain/: Domain.ts  domainBlueprint.ts
frontend/src/types/core/memory/: workingMemory.ts
frontend/src/types/core/pipes/: base.ts  index.ts  inputs.ts  pipe-output.ts
frontend/src/types/core/pipes/pipe_controllers/: index.ts  pipeBatch.ts  pipeCondition.ts  pipeParallel.ts  pipeSequence.ts
frontend/src/types/core/pipes/pipe_operators/: index.ts  pipeCompose.ts  pipeExtract.ts  pipeFunc.ts  pipeImgGen.ts  pipeLLM.ts
frontend/src/types/core/stuffs/: stuff.ts
